# astrbot_plugin_desktop_pet

./: .gitignore  LICENSE  README.md  _conf_schema.json  main.py  metadata.yaml
pages/pet/: app.js  index.html  style.css
pet_shell/: package-lock.json  package.json
pet_shell/src/: app.js  index.html  style.css
pet_shell/src-tauri/: Cargo.toml  tauri.conf.json
pet_shell/src-tauri/capabilities/: default.json
pet_shell/src-tauri/src/: main.rs
pet_shell/src/lab/: index.html  probe.html
pet_shell/tools/: gen_assets.py  gen_motions.py  start_all.ps1  start_all.vbs  stop_all.ps1  stop_all.vbs
